terraform/azure/poc/template_terraform_azure_aio/subnet.tf
resource "azurerm_subnet" "template_sn" {
  name                 = "${terraform.workspace}-sn"
  resource_group_name  = azurerm_resource_group.template_rg.name
  virtual_network_name = azurerm_virtual_network.template_vn.name
  address_prefixes     = ["10.0.2.0/24"]
}
